💬 Cura Legacy => CuraEngine Legacy
As discussed in

  https://community.octoprint.org/t/tronxy-x5s-looking-for-profile/8742/3

We don't want people to confuse this with the OctoPrint plugin for Cura.

--- a/octoprint_curalegacy/templates/curalegacy_settings.jinja2
+++ b/octoprint_curalegacy/templates/curalegacy_settings.jinja2
@@ -19,7 +19,7 @@
 <button class="btn pull-right" data-bind="click: function() { $root.showImportProfileDialog() }">{{ _('Import Profile...') }}</button>
 
 <div style="clear: both">
-    <small>{% trans %}For more information on configuration and usage please <a href="{{ plugin_cura_homepage }}" target="_blank">see the Plugin's homepage</a>.{% endtrans %}</small>
+    <small>{% trans %}For more information on configuration and usage please <a href="{{ plugin_curalegacy_homepage }}" target="_blank">see the Plugin's homepage</a>.{% endtrans %}</small>
 </div>
 
 {% include "snippets/settings/curalegacy/profileImporter.jinja2" %}
