--- a/octoprint_curalegacy/templates/snippets/settings/curalegacy/profileImporter.jinja2
+++ b/octoprint_curalegacy/templates/snippets/settings/curalegacy/profileImporter.jinja2
@@ -1,7 +1,7 @@
 <div id="settings_plugin_curalegacy_import" class="modal hide fade">
     <div class="modal-header">
         <a href="#" class="close" data-dismiss="modal" aria-hidden="true">&times;</a>
-        <h3>{{ _('Import Existing Cura Legacy Profile') }}</h3>
+        <h3>{{ _('Import Existing CuraEngine Legacy Profile') }}</h3>
     </div>
     <div class="modal-body">
         <form class="form-horizontal">
@@ -53,7 +53,7 @@
         <small>{% trans %}
             You can import your existing profile <code>.ini</code> files from <strong>Cura 15.04.x or older</strong>
             here. Anything but those are <strong>not supported</strong>. That especially means that <code>.json</code>
-            profiles from Cura 15.06.x and <code>.curaprofile</code> profiles from Cura 2.x will not work, and neither
+            profiles from Cura 15.06.x and <code>.curaprofile</code> profiles from Cura 2.x, 3.x, 4.x, ... will not work, and neither
             will custom Cura profile formats that third party tools like e.g. Repetier create.
         {% endtrans %}</small>
     </div>
