--- a/octoprint_curalegacy/templates/curalegacy_wizard.jinja2
+++ b/octoprint_curalegacy/templates/curalegacy_wizard.jinja2
@@ -1,8 +1,8 @@
 <div data-bind="visible: unconfiguredCuraEngine">
     <h3>{{ _('Configure CuraEngine Legacy') }}</h3>
     <p>{% trans %}
-        The path to CuraEngine has not yet been set up, in order to be able to use
-        CuraEngine for slicing it needs to be specified.
+        The path to CuraEngine Legacy has not yet been set up, in order to be able to use
+        CuraEngine Legacy for slicing it needs to be specified.
     {% endtrans %}</p>
 
     <div style="margin-top: 1em">
@@ -14,7 +14,7 @@
 
 <div data-bind="visible: unconfiguredSlicingProfile">
     <h3>{{ _('Set up a slicing profile') }}</h3>
-    <p>{% trans %}You haven't imported a slicing profile to use for slicing with CuraEngine
+    <p>{% trans %}You haven't imported a slicing profile to use for slicing with CuraEngine Legacy
     yet. If you plan on slicing from within OctoPrint then you should do this now.
     Otherwise just skip this step.{% endtrans %}</p>
 
@@ -27,7 +27,7 @@
     <div style="clear: both; margin-top: 20px;">
         <small>{% trans %}
             <strong>Don't know where to get a profile?</strong> In order to export
-            a slicing profile from the Cura desktop UI up to and including version 15.04.06 (not versions
+            a slicing profile from the legacy Cura desktop UI up to and including version 15.04.06 (not versions
             2.1 and later which are actually newer than 15.04), open it, set up your profile, then click
             on "File" and there on "Save Profile". You can import the <code>.ini</code> file this creates
             via the "Import Profile" button.
