--- a/octoprint_curalegacy/templates/snippets/settings/curalegacy/enginePath.jinja2
+++ b/octoprint_curalegacy/templates/snippets/settings/curalegacy/enginePath.jinja2
@@ -1,5 +1,5 @@
 <div class="control-group" data-bind="css: {error: pathBroken(), success: pathOk()}">
-    <label class="control-label" for="settings-curalegacy-path">{{ _('Path to CuraEngine') }}</label>
+    <label class="control-label" for="settings-curalegacy-path">{{ _('Path to CuraEngine Legacy') }}</label>
     <div class="controls">
         <div class="input-append">
             <input type="text" class="input-block-level" data-bind="value: settings.plugins.curalegacy.cura_engine, valueUpdate: 'afterkeydown'" id="settings-curalegacy-path">
